après l'ajout dans Local session le changement s'affiche

--- a/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
@@ -54,8 +54,12 @@
 							<td>
 								<span class="equipment-category">Informatique</span>
 								<select class="form-select d-none" name="equipment-category">
-									<option value="Informatique">Informatique</option>
-									<option value="Autre catégorie">Autre catégorie</option>
+									<option value="Informatique">Ordinateur portable</option>
+									<option value="Informatique">Ecran d'ordinateur</option>
+									<option value="Informatique">Smartphone</option>
+									<option value="Informatique">Accessoires</option>
+									<option value="Informatique">Tablette</option>
+									<option value="Autre catégorie">Casque VR</option>
 								</select>
 							</td>
 							<td>
