supprimer une ligne

--- a/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
@@ -81,7 +81,7 @@
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 										<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
-										<li><a class="dropdown-item" href="#">Supprimer</a></li>
+										<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
 										<li><a class="dropdown-item" href="#">Voir les détails</a></li>
 										<li><a class="dropdown-item" href="#">Réserver</a></li>
 										<li><a class="dropdown-item toggle-log-button" href="#"
