--- a/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
@@ -244,17 +244,22 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-3">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item list-group-item-action py-2" data-type="laptop">Ordinateurs portables</a>
-                                <a href="#" class="list-group-item list-group-item-action py-2" data-type="сomputer_monitor">Ecrans d'ordinateurs</a>
-                                <a href="#" class="list-group-item list-group-item-action py-2" data-type="smartphone">Smartphones</a>
-                                <a href="#" class="list-group-item list-group-item-action py-2" data-type="accessory">Accessoires</a>
-                                <a href="#" class="list-group-item list-group-item-action py-2" data-type="tablet">Tablettes</a>
-                                <a href="#" class="list-group-item list-group-item-action py-2" data-type="VR_headset">Casque VR</a>
+                            <!-- Навигация вкладок -->
+                            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                                <a class="nav-link active" id="v-pills-laptop-tab" data-bs-toggle="pill" href="#v-pills-laptop" role="tab" aria-controls="v-pills-laptop" aria-selected="true">Ordinateurs portables</a>
+                                <a class="nav-link" id="v-pills-computer-monitor-tab" data-bs-toggle="pill" href="#v-pills-computer-monitor" role="tab" aria-controls="v-pills-computer-monitor" aria-selected="false">Ecrans d'ordinateurs</a>
+                                <a class="nav-link" id="v-pills-smartphone-tab" data-bs-toggle="pill" href="#v-pills-smartphone" role="tab" aria-controls="v-pills-smartphone" aria-selected="false">Smartphones</a>
+                                <!-- Добавьте дополнительные вкладки здесь -->
                             </div>
                         </div>
-                        <div id="equipment-list" class="col-md-9">
-                            <!-- Les unités du matériel apparaîtront ici -->
+                        <div class="col-md-9">
+                            <!-- Контент вкладок -->
+                            <div class="tab-content" id="v-pills-tabContent">
+                                <div class="tab-pane fade show active" id="v-pills-laptop" role="tabpanel" aria-labelledby="v-pills-laptop-tab">Контент для ноутбуков</div>
+                                <div class="tab-pane fade" id="v-pills-computer-monitor" role="tabpanel" aria-labelledby="v-pills-computer-monitor-tab">Контент для мониторов</div>
+                                <div class="tab-pane fade" id="v-pills-smartphone" role="tabpanel" aria-labelledby="v-pills-smartphone-tab">Контент для смартфонов</div>
+                                <!-- Добавьте контент для дополнительных вкладок здесь -->
+                            </div>
                         </div>
                     </div>
                 </div>
