--- a/germax-frontend/src/templates/components/content-page-admin-reports/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reports/index.html
@@ -14,7 +14,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="generateReportModalLabel">Générer un Rapport</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -33,10 +33,14 @@
             <input type="date" class="form-control" id="startDate">
             <input type="date" class="form-control" id="endDate">
           </div>
+		  <div class="form-group">
+			<label for="reportMessage">Message</label>
+			<textarea class="form-control" id="reportMessage" rows="3"></textarea>
+		</div>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
         <button type="button" class="btn btn-primary">Générer</button>
       </div>
     </div>
